--- a/Dinha/Sistema_Estoque/css/sb-admin-2.css
+++ b/Dinha/Sistema_Estoque/css/sb-admin-2.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-sb-admin-2/blob/master/LICENSE)
  */
 
-/*!
+/*!hhhh
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
