--- a/SistemaWeb/src/main/resources/static/templates/cadastrar.html
+++ b/SistemaWeb/src/main/resources/static/templates/cadastrar.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-<título>SB Admin 2 - Register</title>
+<title>SB Admin 2 - Register</title>
 
     <!-- Fontes personalizadas para este modelo-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
