--- a/SistemaWeb/src/main/resources/static/templates/login.html
+++ b/SistemaWeb/src/main/resources/static/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml"
+      xmlns:layout="http://www.ultraq.net.nz./thymeleaf/layout">
 
 <head>
 
@@ -59,23 +60,18 @@
                                                     Meu</label>
                                             </div>
                                         </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <a type="submit" href="dashboard.html" class="btn btn-primary btn-user btn-block">
                                             Conecte-se
                                         </a>
                                         <hr>
-                                        <a href="index.html" class="btn btn-google btn-user btn-block">
-                                            <i class="fab fa-google fa-fw"></i>Faça login com o Google
-                                        </a>
-                                        <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Entrar com o Facebook
-                                        </a>
+
                                     </form>
                                     <hr>
                                     <div class="text-center">
                                         <a class="small" href="forgot-password.html">Esqueceu sua senha?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Crie a sua conta aqui!</a>
+                                        <a class="small" href="cadastrar.html">Crie a sua conta aqui!</a>
                                     </div>
                                 </div>
                             </div>
