--- a/SistemaWeb/src/main/resources/static/templates/blank.html
+++ b/SistemaWeb/src/main/resources/static/templates/blank.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml"
-      xmlns:layout="http://www.ultraq.net.nz./thymeleaf/layout">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="utf-8">
@@ -43,7 +42,7 @@
 
             <!-- Item NAV - Painel -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Painel</span></a>
             </li>
