--- a/SistemaWeb/src/main/resources/static/templates/tables.html
+++ b/SistemaWeb/src/main/resources/static/templates/tables.html
@@ -383,7 +383,7 @@
                                             <div class="text-center">
                                                 <h1 class="h4 text-gray-900 mb-4">Crie a sua conta aqui!</h1>
                                             </div>
-                                            <form class="user" method="POST" action="/dashboard">
+                                            <form class="user" method="POST" action="/dinha">
                                                 <div class="form-group row">
                                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                                         <input type="text" class="form-control form-control-user" name="nome"placeholder="nome do produto">
