--- a/SistemaWeb/src/main/resources/static/templates/404.html
+++ b/SistemaWeb/src/main/resources/static/templates/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml"
-      xmlns:layout="http://www.ultraq.net.nz./thymeleaf/layout">
+<<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="utf-8">
