--- a/SistemaWeb/src/main/resources/static/templates/cadastrar.html
+++ b/SistemaWeb/src/main/resources/static/templates/cadastrar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
