substituiçao de imagem login e ronomeamento de onde add produto
substituiçao de imagem login e ronomeamento de onde add produto

--- a/SistemaWeb/src/main/resources/static/templates/tables.html
+++ b/SistemaWeb/src/main/resources/static/templates/tables.html
@@ -382,7 +382,7 @@ xmlns:th="http://www.thymeleaf.org">
                                     <div class="col-lg-7">
                                         <div class="p-5">
                                             <div class="text-center">
-                                                <h1 class="h4 text-gray-900 mb-4">Crie a sua conta aqui!</h1>
+                                                <h1 class="h4 text-gray-900 mb-4">adicione o prudoto aqui!</h1>
                                             </div>
                                             <form class="user" method="POST" action="/dinha">
                                                 <div class="form-group row">
