--- a/SistemaWeb/src/main/resources/static/templates/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/templates/dashboard.html
@@ -1,4 +1,89 @@
 <!DOCTYPE html>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+xmlns:th="http://www.thymeleaf.org">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>SB Admin 2 - Dashboard</title>
+
+    <!--Fontes personalizadas para este modelo-->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+    
+    <!-- Estilos personalizados para este modelo-->
+<link href="css/sb-admin-2.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/sb-admin-2.css">
+
+</head>
+
+<body id="page-top">
+
+
+    <!--Invólucro de página -->
+    <div id="wrapper">
+
+        <!-- Barra Lateral -->
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+
+            <!-- Barra lateral - marca -->
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+                <div class="sidebar-brand-icon rotate-n-15">
+                    <i class="fas fa-laugh-wink"></i>
+                </div>
+                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+            </a>
+
+            <!-- Divisor -->
+            <hr class="sidebar-divider my-0">
+
+            <!-- Item NAV - Painel -->
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Painel</span>
+                </a>
+            </li>
+
+            <!-- Divisor -->
+            <hr class="sidebar-divider">
+
+            <!-- Cabeçalho -->
+            <div class="sidebar-heading">
+Interface            </div>
+
+     
+
+
+            <!-- Divisor -->
+            <hr class="sidebar-divider">
+
+            <!-- Cabeçalho -->
+            <div class="sidebar-heading">
+                Addons
+            </div>
+
+            <!-- Item NAV - Menu de colapso das páginas -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+                    aria-expanded="true" aria-controls="collapsePages">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Páginas</span>
+                </a>
+                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Telas de login:</h6>
+                        <a class="collapse-item" href="login.html">Conecte-se</a>
+                        <a class="collapse-item" href="register.html">Registro</a>
+                        <a class="collapse-
+<!DOCTYPE html>
 <<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
 xmlns:th="http://www.thymeleaf.org">
 
