--- a/SistemaWeb/src/main/resources/static/templates/login.html
+++ b/SistemaWeb/src/main/resources/static/templates/login.html
@@ -37,7 +37,7 @@ xmlns:th="http://www.thymeleaf.org">
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6 d-none d-lg-block bg-login-image" style="background-image: url('https://cdn6.campograndenews.com.br/uploads/noticias/2020/08/24/b0db03ccba7dd7ca764ce3ea9127c4bfe9b1be99.jpeg');"></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
