--- a/SistemaWeb/src/main/resources/static/templates/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/templates/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
 xmlns:th="http://www.thymeleaf.org">
 
 <head>
