--- a/SistemaWeb/src/main/resources/static/templates/cadastrar.html
+++ b/SistemaWeb/src/main/resources/static/templates/cadastrar.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
-xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-
-    atible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-<title>SB Admin 2 - Register</title>
+    <title>SB Admin 2 - Register</title>
 
-    <!-- Fontes personalizadas para este modelo-->
+    <!-- Fontes personalizadas para este modelo -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-<!--Estilos personalizados para este modelo--> 
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+    <!-- Estilos personalizados para este modelo -->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/sb-admin-2.css">
 
@@ -31,7 +28,7 @@ xmlns:th="http://www.thymeleaf.org">
             <div class="card-body p-0">
                 <!-- Linha aninhada no corpo do cartão -->
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                    <div class="col-lg-5 d-none d-lg-block" style="background-image: url('https://cdn6.campograndenews.com.br/uploads/noticias/2020/08/24/b0db03ccba7dd7ca764ce3ea9127c4bfe9b1be99.jpeg'); background-size: cover;"></div>
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
@@ -40,11 +37,10 @@ xmlns:th="http://www.thymeleaf.org">
                             <form class="user" method="POST" action="/dashboard">
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" name="nome"placeholder="Digite seu nome">
+                                        <input type="text" class="form-control form-control-user" name="nome" placeholder="Digite seu nome">
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                        placeholder="Last Name">
+                                        <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -52,26 +48,23 @@ xmlns:th="http://www.thymeleaf.org">
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            name="senha" placeholder="Digite sua senha">
+                                        <input type="password" class="form-control form-control-user" name="senha" placeholder="Digite sua senha">
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleRepeatPassword" placeholder="Repeat Password">
+                                        <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <a type="submit" href="dashboard.html" class="btn btn-primary btn-user btn-block">
-                                    Registar Conta
-                                </a>
+                                <button type="submit" class="btn btn-primary btn-user btn-block">
+                                    Registrar Conta
+                                </button>
                                 <hr>
-                                
                             </form>
                             <hr>
                             <div class="text-center">
                                 <a class="small" href="forgot-password.html">Esqueceu sua senha?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">já tem uma conta?Conecte-se!</a>
+                                <a class="small" href="login.html">Já tem uma conta? Conecte-se!</a>
                             </div>
                         </div>
                     </div>
@@ -85,7 +78,7 @@ xmlns:th="http://www.thymeleaf.org">
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plug -in principal javascript-->
+    <!-- Plug-in principal javascript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Scripts personalizados para todas as páginas-->
