--- a/SistemaWeb/src/main/resources/static/templates/cadastrar.html
+++ b/SistemaWeb/src/main/resources/static/templates/cadastrar.html
@@ -18,6 +18,8 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/sb-admin-2.css">
 
+    <!-- Adicione o link para o novo favicon -->
+    <link rel="icon" type="image/x-icon" href="C:/Users/Usuário AC/Downloads/baixados-1-ConversImagem.ico">
 </head>
 
 <body class="bg-gradient-primary">
