correção de bugs

--- a/SistemaWeb/src/main/resources/static/templates/login.html
+++ b/SistemaWeb/src/main/resources/static/templates/login.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<html lang="pt-br">
-=======
-=======
->>>>>>> a9aa09f2e3d26464d1dad1f8796cf00032af1216
-=======
->>>>>>> a9aa09f2e3d26464d1dad1f8796cf00032af1216
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
-xmlns:th="http://www.thymeleaf.org">
-
->>>>>>> a9aa09f2e3d26464d1dad1f8796cf00032af1216
+<<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
