favicon página cadastrar

--- a/SistemaWeb/src/main/resources/static/templates/cadastrar.html
+++ b/SistemaWeb/src/main/resources/static/templates/cadastrar.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/sb-admin-2.css">
 
     <!-- Adicione o link para o novo favicon -->
-    <link rel="icon" type="image/x-icon" href="C:/Users/Usuário AC/Documents/GitHub/Sistema_Dinha_Kids/SistemaWeb/src/main/resources/static/templates/img/baixados-1-ConversImagem.ico">
+    <link rel="icon" type="image/x-icon" th:href="@/img/baixados-1-ConversImagem.ico">
 </head>
 
 <body class="bg-gradient-primary">
