--- a/SistemaWeb/src/main/resources/static/templates/blank.html
+++ b/SistemaWeb/src/main/resources/static/templates/blank.html
@@ -10,7 +10,7 @@ xmlns:th="http://www.thymeleaf.org">
     <meta name="author" content="">
 
     <title>sbAdmin2EmBranco</title>
-
+      <link rel="shortcut icon" href="iconetitulo/icon.ico" type="image/x-icon">
     <!-- Fontes personalizadas para este modelo-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
