--- a/SistemaWeb/src/main/resources/static/templates/login.html
+++ b/SistemaWeb/src/main/resources/static/templates/login.html
@@ -17,8 +17,7 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/sb-admin-2.css">
 
-    <!-- Adicione o link para o novo favicon -->
-    <link rel="icon" type="image/x-icon" href="C:/Users/Usuário AC/Downloads/baixados-1-ConversImagem.ico">
+    <link rel="shortcut icon" href="iconetitulo/icon.ico" type="image/x-icon">
 </head>
 
 <body class="bg-gradient-primary">
