--- a/SistemaWeb/src/main/resources/static/templates/dashboard.html
+++ b/SistemaWeb/src/main/resources/static/templates/dashboard.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+      <link rel="shortcut icon" href="iconetitulo/icon.ico" type="image/x-icon">
     <title>SB Admin 2 - Dashboard</title>
 
     <!--Fontes personalizadas para este modelo-->
