--- a/SistemaWeb/src/main/resources/static/templates/404.html
+++ b/SistemaWeb/src/main/resources/static/templates/404.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>sbAdmin2404</title>
-
+       <link rel="shortcut icon" href="iconetitulo/icon.ico" type="image/x-icon">
     <!-- Fontes personalizadas para este modelo-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
