--- a/SistemaWeb/src/main/resources/static/templates/tables.html
+++ b/SistemaWeb/src/main/resources/static/templates/tables.html
@@ -10,7 +10,7 @@ xmlns:th="http://www.thymeleaf.org">
     <meta name="author" content="">
 
     <title>SB Admin 2 - Tables</title>
-
+     <link rel="shortcut icon" href="iconetitulo/icon.ico" type="image/x-icon">
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
