--- a/SistemaWeb/src/main/resources/static/templates/tables.html
+++ b/SistemaWeb/src/main/resources/static/templates/tables.html
@@ -378,11 +378,11 @@ xmlns:th="http://www.thymeleaf.org">
                             <div class="card-body p-0">
                                 <!-- Linha aninhada no corpo do cartão -->
                                 <div class="row">
-                                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                                    <div class="col-lg-5 d-none d-lg-block" style="background-image: url('iconetitulo/CCCCCC.png');"></div>
                                     <div class="col-lg-7">
                                         <div class="p-5">
                                             <div class="text-center">
-                                                <h1 class="h4 text-gray-900 mb-4">adicione o prudoto aqui!</h1>
+                                                <h1 class="h4 text-gray-900 mb-4">Adicione o produto aqui!</h1>
                                             </div>
                                             <form class="user" method="POST" action="/dinha">
                                                 <div class="form-group row">
