--- a/SistemaWeb/src/main/resources/templates/tables.html
+++ b/SistemaWeb/src/main/resources/templates/tables.html
@@ -206,11 +206,11 @@ xmlns:th="http://www.thymeleaf.org">
                                                 <div class="form-group row">
                                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                                         <input type="text" class="form-control form-control-user"
-                                                               name="categoria" placeholder="categoria do produto">
+                                                               name="category" placeholder="categoria do produto">
                                                     </div>
                                                     <div class="col-sm-6">
                                                         <input type="text" class="form-control form-control-user"
-                                                               name="fornecedor" placeholder="Nome do fornecedor">
+                                                               name="id" placeholder="Referência do Produto">
                                                     </div>
                                                 </div>
                                                 <button type="button" class="btn btn-primary btn-user btn-block" onclick="window.location.href='dashboard.html';">Salvar dados</button>
