Conexão front e back

--- a/SistemaWeb/src/main/resources/templates/tables.html
+++ b/SistemaWeb/src/main/resources/templates/tables.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
-xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="utf-8">
@@ -10,19 +9,22 @@ xmlns:th="http://www.thymeleaf.org">
     <meta name="author" content="">
 
     <title>SB Admin 2 - Tables</title>
-     <link rel="shortcut icon" href="../static/iconetitulo/icon.ico" type="image/x-icon">
-    <!-- Custom fonts for this template -->
-    <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="../static/css/sb-admin-2.min.css" rel="stylesheet">
+    <!-- Fontes personalizadas para este modelo -->
+    <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+    <!-- Estilos personalizados para este modelo -->
+    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
+    <link th:href="@{/css/sb-admin-2.css}" rel="stylesheet">
+
+    <link rel="shortcut icon" th:href="@{/iconetitulo/icon.ico}" type="image/x-icon">
+
 
     <!-- Custom styles for this page -->
-    <link href="../static/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/sb-admin-2.css">
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+    <link th:href="@{/css/sb-admin-2.css}" rel="stylesheet">
+
 
 </head>
 
@@ -35,8 +37,9 @@ xmlns:th="http://www.thymeleaf.org">
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
             <!-- antes:  href="../static/templates\dashboard.html" -->
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="../static/dashboard.html">
-                <div class="sidebar-brand-icon rotate-n-15">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/dashboard.html}">
+
+            <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
@@ -47,7 +50,7 @@ xmlns:th="http://www.thymeleaf.org">
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="../static/dashboard.html">
+                <a class="nav-link" th:href="@{/dashboard.html}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -77,13 +80,14 @@ xmlns:th="http://www.thymeleaf.org">
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="../static/login.html">Login</a>
-                        <a class="collapse-item" href="cadastro.html">Cadastrar</a>
+                        <a class="collapse-item" th:href="@{/login.html}">Login</a>
+                        <a class="collapse-item" th:href="@{/cadastro}">Cadastrar</a>
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="../static/404.html">404 Page</a>
-                        <a class="collapse-item" href="../static/blank.html">Blank Page</a>
+                        <a class="collapse-item" th:href="@{/404.html}">404 Page</a>
+                        <a class="collapse-item" th:href="@{/blank.html}">Blank Page</a>
+
                     </div>
                 </div>
             </li>
@@ -91,7 +95,7 @@ xmlns:th="http://www.thymeleaf.org">
 
             <!-- Nav Item - Tables -->
             <li class="nav-item active">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" th:href="@{/tables}">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Tables</span></a>
             </li>
@@ -182,7 +186,8 @@ xmlns:th="http://www.thymeleaf.org">
                             <div class="card-body p-0">
                                 <!-- Linha aninhada no corpo do cartão -->
                                 <div class="row">
-                                    <div class="col-lg-5 d-none d-lg-block" style="background-image: url('/static/img/produtos.jpeg'); background-size: cover;"></div>
+                                    <div class="col-lg-5 d-none d-lg-block" th:style="'background-image: url(' + @{/img/produtos.jpeg} + '); background-size: cover;'"></div>
+
 
                                     <div class="col-lg-7">
                                         <div class="p-5">
@@ -214,6 +219,7 @@ xmlns:th="http://www.thymeleaf.org">
                                                     </div>
                                                 </div>
                                                 <button type="button" class="btn btn-primary btn-user btn-block" onclick="window.location.href='dashboard.html';">Salvar dados</button>
+
 
                                                 <hr>
 
@@ -314,28 +320,29 @@ xmlns:th="http://www.thymeleaf.org">
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="../static/login.html">Logout</a>
+                    <a class="btn btn-primary" th:href="@{/login.html}">Logout</a>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="../static/vendor/jquery/jquery.min.js"></script>
-    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+    <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="../static/js/sb-admin-2.min.js"></script>
+    <script th:src="@{/js/sb-admin-2.min.js}"></script>
 
     <!-- Page level plugins -->
-    <script src="../static/vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="../static/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+    <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
+    <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
 
     <!-- Page level custom scripts -->
-    <script src="../static/js/demo/datatables-demo.js"></script>
+    <script th:src="@{/js/demo/datatables-demo.js}"></script>
+
 
 </body>
 
