--- a/SistemaWeb/src/main/resources/templates/tables.html
+++ b/SistemaWeb/src/main/resources/templates/tables.html
@@ -218,7 +218,9 @@
                                                                name="id" placeholder="Referência do Produto">
                                                     </div>
                                                 </div>
-                                                <button type="button" class="btn btn-primary btn-user btn-block" onclick="window.location.href='dashboard.html';">Salvar dados</button>
+                                                <button type="submit" class="btn btn-primary btn-user btn-block">
+                                                    Salvar dados
+                                                </button>
 
 
                                                 <hr>
