--- a/SistemaWeb/src/main/resources/templates/cadastro.html
+++ b/SistemaWeb/src/main/resources/templates/cadastro.html
@@ -62,7 +62,7 @@
                             <hr>
 
                             <div class="text-center">
-                                <a class="small" href="../static/login.html">Já tem uma conta? Conecte-se!</a>
+                                <a class="small" href="login.html">Já tem uma conta? Conecte-se!</a>
                             </div>
                         </div>
                     </div>
