--- a/SistemaWeb/src/main/resources/templates/login.html
+++ b/SistemaWeb/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,14 @@
     <title>SB Admin 2 - Login</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/sb-admin-2.css">
+    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/sb-admin-2.css}">
 
-    <link rel="shortcut icon" href="iconetitulo/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{/iconetitulo/icon.ico}" type="image/x-icon">
 </head>
 
 <body class="bg-gradient-primary">
@@ -28,7 +28,7 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image" style="background-image: url('/static/img/cadastro.jpeg'); background-size: cover;"></div>
+                            <div class="col-lg-5 d-none d-lg-block" th:style="'background-image: url(\'' + @{/img/cadastro.jpeg} + '\'); background-size: cover;'" ></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
@@ -39,7 +39,7 @@
                                             <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
                                         </div>
                                         <div class="form-group">
-                                            <input type="senha" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                                            <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -47,14 +47,14 @@
                                                 <label class="custom-control-label" for="customCheck">Lembrar Meu</label>
                                             </div>
                                         </div>
-                                        <a type="submit" href="dashboard.html" class="btn btn-primary btn-user btn-block">
-                                            Conecte-se
-                                        </a>
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
+                                            Entrar na conta
+                                        </button>
                                         <hr>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="../templates/cadastro.html">Crie a sua conta aqui!</a>
+                                        <a class="small" th:href="cadastro.html">Crie a sua conta aqui!</a>
                                     </div>
                                 </div>
                             </div>
@@ -66,13 +66,13 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+    <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <script th:src="@{/js/sb-admin-2.min.js}"></script>
 </body>
 </html>
