--- a/SistemaWeb/src/main/resources/templates/tables.html
+++ b/SistemaWeb/src/main/resources/templates/tables.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Tables</title>
+    <title>Dinha Kids - Tabela </title>
 
     <!-- Fontes personalizadas para este modelo -->
     <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -42,7 +42,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">Dinha Kids <sup>Tabela</sup></div>
             </a>
 
             <!-- Divider -->
@@ -75,18 +75,18 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <span>Páginas</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
+                        <h6 class="collapse-header">Telas de login:</h6>
                         <a class="collapse-item" th:href="@{/login.html}">Login</a>
                         <a class="collapse-item" th:href="@{/cadastro}">Cadastrar</a>
 
                         <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" th:href="@{/404.html}">404 Page</a>
-                        <a class="collapse-item" th:href="@{/blank.html}">Blank Page</a>
+                        <h6 class="collapse-header">Outras Páginas:</h6>
+                        <a class="collapse-item" th:href="@{/404.html}">404 Página</a>
+                        <a class="collapse-item" th:href="@{/blank.html}">Página em branco</a>
 
                     </div>
                 </div>
@@ -95,9 +95,9 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item active">
-                <a class="nav-link" th:href="@{/tables}">
+                <a class="nav-link" >
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                    <span>Tabela</span></a>
             </li>
 
             <!-- Divider -->
